--- a/count-tabs/popup.html
+++ b/count-tabs/popup.html
@@ -1,1 +1,1 @@
-o include incognito tabs, enable ‘Allow in incognito’ under extension settings."
+To include incognito tabs, enable ‘Allow in incognito’ under extension settings.
