--- a/browser-data/src/popup.html
+++ b/browser-data/src/popup.html
@@ -79,6 +79,12 @@
 
 <body>
     <h2>Browser Data</h2>
+    <div style="display: none;">
+        Color: 
+        <input type="color" name="badgecol" id="badgecol">
+        text:
+        <input type="color" name="badgetextcol" id="badgetextcol">
+    </div>
     <div>
         <section id="s_tab">
             <h3>Tab data</h3>
@@ -103,6 +109,7 @@
             </div>
         </section>
     </div>
+
 </body>
 
 </html>
