--- a/browser-data/src/popup.html
+++ b/browser-data/src/popup.html
@@ -13,6 +13,8 @@
             font-family: "Inter", Arial, sans-serif;
             background: #f7f7f7;
             padding: 6px;
+            width: 27.5em;
+            height: 35em;
         }
 
         h2 {
@@ -69,6 +71,11 @@
             box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.05);
         }
 
+        button {
+            border: none;
+            margin-bottom: 10px;
+        }
+
         /* strong {
             font-size: large;
             display: block;
@@ -79,13 +86,19 @@
 
 <body>
     <h2>Browser Data</h2>
-    <div style="display: none;">
+    <nav style="display: flex; justify-content: space-between;">
+        <button id="back_button"><img width="15em" height="15em" src="icons/back-svgrepo-com.png" alt="back" ></button>
+        <button id="settings_button"><img width="15em" height="15em" src="icons/settings-svgrepo-com (1).png" alt="settings"></button>
+    </nav>
+
+    <div id="settings_page" style="display: none;">
         Color: 
         <input type="color" name="badgecol" id="badgecol">
         text:
         <input type="color" name="badgetextcol" id="badgetextcol">
     </div>
-    <div>
+    
+    <div id="main_page">
         <section id="s_tab">
             <h3>Tab data</h3>
             <div>
