--- a/browser-data/src/popup.html
+++ b/browser-data/src/popup.html
@@ -80,6 +80,26 @@
             font-size: large;
             display: block;
         } */
+
+        .color-picker-group {
+            margin: 15px 0;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+        }
+
+        label {
+            font-weight: bold;
+            flex-grow: 1;
+        }
+
+        input[type="color"] {
+            width: 60px;
+            height: 40px;
+            border: none;
+            cursor: pointer;
+            border-radius: 5px;
+        }
     </style>
 
 </head>
@@ -87,17 +107,26 @@
 <body>
     <h2>Browser Data</h2>
     <nav style="display: flex; justify-content: space-between;">
-        <button id="back_button"><img width="15em" height="15em" src="icons/back-svgrepo-com.png" alt="back" ></button>
-        <button id="settings_button"><img width="15em" height="15em" src="icons/settings-svgrepo-com (1).png" alt="settings"></button>
+        <button id="back_button"><img width="15em" height="15em" src="icons/back-svgrepo-com.png" alt="back"></button>
+        <button id="settings_button"><img width="15em" height="15em" src="icons/settings-svgrepo-com (1).png"
+                alt="settings"></button>
     </nav>
 
+    <!-- will probably add the icon blend thingy and deactivate the buttons in style update -->
+
+    <!-- Settings page -->
     <div id="settings_page" style="display: none;">
-        Color: 
-        <input type="color" name="badgecol" id="badgecol">
-        text:
-        <input type="color" name="badgetextcol" id="badgetextcol">
+        <div class="color-picker-group">
+            <label for="badgeBgColor">Badge Background Color:</label>
+            <input type="color" id="badgeBgColor">
+        </div>
+        <div class="color-picker-group">
+            <label for="badgeTextColor">Badge Text Color:</label>
+            <input type="color" id="badgeTextColor" value="#FFFFFF">
+        </div>
     </div>
-    
+
+    <!-- Main page -->
     <div id="main_page">
         <section id="s_tab">
             <h3>Tab data</h3>
