Update: Completing badge color changing

--- a/browser-data/src/popup.html
+++ b/browser-data/src/popup.html
@@ -122,7 +122,7 @@
         </div>
         <div class="color-picker-group">
             <label for="badgeTextColor">Badge Text Color:</label>
-            <input type="color" id="badgeTextColor" value="#FFFFFF">
+            <input type="color" id="badgeTextColor">
         </div>
     </div>
 
