--- a/browser-data/src/popup.html
+++ b/browser-data/src/popup.html
@@ -128,6 +128,12 @@
 
     <!-- Main page -->
     <div id="main_page">
+        <section id="s_time">
+            <h3>time open</h3>
+            <div>
+                <span id="tab_age"></span>
+            </div>
+        </section>
         <section id="s_tab">
             <h3>Tab data</h3>
             <div>
