Chore: Cleanup listeners
Removing some logic

--- a/src/popup.html
+++ b/src/popup.html
@@ -135,10 +135,10 @@
         <div style="display: flex; align-items: center; justify-content: center;">
             <span class="color-picker-group">
                 <label for="badgeBgColor">Bkg Color</label>
-                <input type="color" id="badgeBgColor" value="" style="border-radius: 1.5em 0 0 1.5em;">
+                <input type="color" id="badgeBgColor" style="border-radius: 1.5em 0 0 1.5em;">
             </span>
             <span class="color-picker-group">
-                <input type="color" id="badgeTextColor" value="" style="border-radius: 0 1.5em 1.5em 0;">
+                <input type="color" id="badgeTextColor" style="border-radius: 0 1.5em 1.5em 0;">
                 <label for="badgeTextColor">Text Color</label>
             </span>
         </div>
