--- a/src/popup.html
+++ b/src/popup.html
@@ -12,39 +12,40 @@
         body {
             font-family: "Inter", Arial, sans-serif;
             background: #f7f7f7;
-            padding: 6px;
+            padding: 0.75em;
             width: 27.5em;
-            height: 35em;
-            color: #333;;
+            height: fit-content;
+            color: #333;
+            min-height: fit-content;
         }
 
         h2 {
-            margin-bottom: 10px;
+            margin-bottom: .75em;
         }
 
         body>div {
             display: flex;
             flex-wrap: wrap;
-            gap: 10px;
+            gap: .75em;
         }
 
         section {
             background: #fff;
-            padding: 10px;
-            border-radius: 8px;
-            box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
+            padding: .75em;
+            border-radius: .75em;
+            box-shadow: 0 .25em .5em rgba(0, 0, 0, 0.1);
             color: #333;
-            flex: 1 1 calc(50% - 20px);
+            flex: 1 1 calc(50% - 2em);
             box-sizing: border-box;
-            min-width: 280px;
+            min-width: 25em;
         }
 
         h3 {
             font-size: 1.1em;
             font-weight: 600;
-            margin-bottom: 6px;
+            margin-bottom: .75em;
             position: relative;
-            padding-bottom: 6px;
+            padding-bottom: .5em;
         }
 
         h3::after {
@@ -52,7 +53,7 @@
             position: absolute;
             left: 0;
             bottom: 0;
-            height: 1px;
+            height: .1em;
             width: 100%;
             background-color: #ccc;
         }
@@ -61,20 +62,20 @@
             display: grid;
             grid-template-columns: 1fr 1fr;
             grid-template-rows: auto auto;
-            gap: 10px;
+            gap: .75em;
         }
 
         section>div>div {
-            flex: 1 1 calc(50% - 10px);
+            flex: 1 1 calc(50% - .75em);
             background: #f9f9f9;
-            padding: 8px;
-            border-radius: 6px;
+            padding: .75em;
+            border-radius: .75em;
             box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.05);
         }
 
         button {
             border: none;
-            margin-bottom: 10px;
+            margin-bottom: .75em;
         }
 
         /* strong {
@@ -83,7 +84,7 @@
         } */
 
         .color-picker-group {
-            margin: 15px 0;
+            margin: 1.5em 0;
             display: flex;
             align-items: center;
             justify-content: center;
@@ -97,8 +98,8 @@
         }
 
         input[type="color"] {
-            width: 60px;
-            height: 40px;
+            width: 6em;
+            height: 4em;
             border: none;
             cursor: pointer;
             padding: none;
