Fix: tab time displaysand popup cleanup
fixing the tab time created and last accessed vars

--- a/src/popup.html
+++ b/src/popup.html
@@ -185,17 +185,18 @@
     <!-- Main page -->
     <div id="main_page">
         <section id="s_time">
-            <h3>time open</h3>
+            <h3>time data</h3>
             <div>
-                <span id="tab_age"></span>
+                <div id="tab_age">Tab age: <strong></strong></div>
+                <div id="tab_last_accessed"> Tab last accessed: <strong></strong></div>
             </div>
         </section>
         <section id="s_tab">
             <h3>Tab data</h3>
             <div>
-                <div id="tabs">Total Tabs:<strong></strong></div>
+                <div id="tabs">Total Tabs: <strong></strong></div>
                 <div id="current_window_tabs">Current Window Tabs: <strong></strong></div>
-                <div id="inactive_tabs">Inactive Tabs:<strong></strong></div>
+                <div id="inactive_tabs">Inactive Tabs: <strong></strong></div>
                 <div id="incognito_tabs">Incognito Tabs: <strong></strong></div>
             </div>
         </section>
