--- a/src/popup.html
+++ b/src/popup.html
@@ -188,7 +188,7 @@
             <h3>time data</h3>
             <div>
                 <div id="tab_age">Tab age: <strong></strong></div>
-                <div id="tab_last_accessed"> Tab last accessed: <strong></strong></div>
+                <!-- <div id="tab_last_accessed"> Tab last accessed: <strong></strong></div> -->
             </div>
         </section>
         <section id="s_tab">
